# auto-trade-openclaw

./: .gitignore  README.md  config.example.json  pyproject.toml  sitecustomize.py
docs/: README-testing.md  telegram-okx-openclaw-coverage-matrix.md  telegram-okx-openclaw-final-test-plan.md  telegram-okx-openclaw-fixture-spec.md  telegram-okx-openclaw-m3-acceptance-runbook.md  telegram-okx-openclaw-milestones.md  telegram-okx-openclaw-small-claw-skill.md  telegram-okx-openclaw-small-claw-system-prompt.md  telegram-okx-openclaw-test-cases.md  telegram-okx-openclaw-test-plan.md  tg-okx-openclaw-repair-backlog-2026-03-21.md  tg-okx-openclaw-repair-execution-plan-2026-03-21.md
fixtures/: channel_sample_v1.html  channel_sample_v2.html
scripts/: bootstrap_okx_config.py  generate_public_web_fixtures.py  hourly_report.py  install_okx_skills.py  m3_acceptance_prep.py  run_demo_suite.py  run_fixture_suite.py  smoke_cli.py  smoke_config.py  smoke_e2e.py  smoke_http_server.py  smoke_okx_demo.py  smoke_operator.py  smoke_runtime.py  smoke_telegram.py  smoke_test.sh  smoke_utils.py  smoke_web.py  tradeclaw.service.example  verify_demo.py
skills/tg-okx-tradeclaw-ops/: SKILL.md
src/tg_okx_auto_trade/: __init__.py  ai.py  config.py  fixture_suite.py  main.py  models.py  okx.py  risk.py  runtime.py  storage.py  (+3 more)
tests/: test_agent_prompt.py  test_app.py  test_e2e.py  test_fixture_suite.py  test_public_channel.py
tg_okx_auto_trade/: __init__.py
tradeclaw/: __init__.py  agent_client.py  app.py  cli.py  config.py  models.py  okx_cli.py  public_channel.py  reporter.py  utils.py
(+129 files in other folders)
